# lsfg-vk-manager

./: README.md  app.py  pyproject.toml
lsfg_vk_manager/: __init__.py  appinfo.py  config_store.py  constants.py  discovery.py  gpu.py  library.py  main.py  models.py  settings.py  ui.py  utils.py
tests/: test_appinfo.py  test_config_store.py  test_discovery.py  test_gpu.py  test_library.py  test_main.py  test_settings.py  test_ui_logic.py  test_utils.py  test_utils_parse_acf.py
